--- a/css/style.css
+++ b/css/style.css
@@ -71,10 +71,10 @@ nav a:hover{
 #theme-switcher svg{
 	height: 80%;
 	padding: 10px;
-	stroke: var(--text-button-color);
+	color: var(--text-button-color);
 }
 #theme-switcher svg:hover{
-	stroke: var(--color-brand);
+	color: var(--color-brand);
 	fill: var(--color-brand);
 }
 nav button:hover{
@@ -86,15 +86,16 @@ main{
 	display: grid;
 	padding: 10px;
 	grid-gap: 30px;
-	justify-content: center;
+	align-content: flex-start;
 	grid-template-columns: repeat(auto-fill, 1fr);
 }
 main .post{
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	grid-template-rows: repeat(auto-fill, minmax(10vh, 1fr));
 	grid-gap: 10px;
 }
-main .post .lang{
+main .post div{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -103,20 +104,46 @@ main .post .lang{
 	background: var(--bg-raised-color);
 	padding: 10px;
 }
-main .post .lang p{
+main .post div p{
 	color: var(--text-color);
 	font-family: "JetBrainsMono-ExtraBold";
 	font-size: 1em;
 	
 }
-main .post .lang:first-child{
+main .post div:first-child{
 	color: var(--text-color);
 	font-size: 1em;
 }
 footer{
 	background-color: var(--bg-raised-color);
 	height: 5vh;
+	padding: 0.5em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	gap: 1em;
+}
+footer .social{
+	border-radius: var(--size-rounded-control);
+	background-color: var(--bg-button-color);
+	display: flex;
+	padding: 0 1em;
+	gap: 1em;
+	height: 100%;
+	justify-content: center;
+}
+footer .social a{
+	height: 100%;
+	display: flex;
+}
+footer .social a svg{
+	display: flex;
+	width: 28px;
+	justify-content: center;
+	color: var(--text-button-color);
+	fill: var(--text-button-color);
+}
+footer .social a svg:hover{
+	color: var(--color-brand);
+	fill: var(--color-brand);
 }
