--- a/css/style.css
+++ b/css/style.css
@@ -131,15 +131,14 @@ footer .social{
 	gap: 1em;
 	height: 100%;
 	justify-content: center;
+	align-items: center;
 }
 footer .social a{
 	height: 100%;
 	display: flex;
 }
 footer .social a svg{
-	display: flex;
 	width: 28px;
-	justify-content: center;
 	color: var(--text-button-color);
 	fill: var(--text-button-color);
 }
