--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ body{
 	font-family: var(--font-standard);
 }
 header{
-	height: 2.5em;
 	padding: 0.5em;
 	display: flex;
 	justify-content: center;
@@ -42,7 +41,9 @@ header{
 nav{
 	height: 100%;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
+	align-items: center;
 	gap: 0.5em;
 }
 nav a{
@@ -58,7 +59,7 @@ nav a{
 nav button{
 	display: flex;
 	align-items: center;
-	height: 100%;
+	height: 3em;
 	margin: 0;
 	padding: 0;
 	background-color: var(--bg-button-color);
@@ -161,38 +162,65 @@ main .progpost{
 	border-radius: 1em;
 	background-color: var(--bg-raised-color);
 }
-
-
-
+.modeling{
+	display: flex;
+	justify-self: center;
+	align-items: flex-start;
+}
+main .secmodeling{
+	width: 100%;
+	display: flex;
+	gap: 30px;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+main .secmodeling img{
+	height: 100%;
+	width: 100%;
+}
+main .secmodeling a{
+	height: 20vh;
+}
+main .secmusic{
+	width: 100%;
+	display: flex;
+	gap: 1em;
+	flex-wrap: wrap;
+	justify-content: center;
+}
 footer{
 	background-color: var(--bg-raised-color);
-	height: 5vh;
-	padding: 0.5em;
 	display: flex;
 	justify-content: center;
-	align-items: center;
-	gap: 1em;
+	gap: 4em;
 }
 footer .social{
 	border-radius: var(--size-rounded-control);
 	background-color: var(--bg-button-color);
 	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 	padding: 0 1em;
+	margin: 0.5em 0;
+}
+footer .social div p{
+	height: 1em;
+	padding: 0.5em 0;
+	margin: 0;
+}
+footer .socialbtn{
+	display: flex;
 	gap: 1em;
 	height: 100%;
-	justify-content: center;
-	align-items: center;
 }
-footer .social a{
-	height: 100%;
-	display: flex;
-}
-footer .social a svg{
-	width: 28px;
+footer .socialbtn a svg{
+	width: 2em;
+	height: 2em;
 	color: var(--text-button-color);
 	fill: var(--text-button-color);
 }
-footer .social a svg:hover{
+footer .socialbtn a svg:hover{
 	color: var(--color-brand);
 	fill: var(--color-brand);
 }
